plugins {
    id 'com.android.application'
}

android {
    compileSdk 33

    defaultConfig {
        applicationId 'com.sg2022.we_got_the_moves'
        minSdk 28
        targetSdk 33
        versionCode 1
        versionName "1.0"
        multiDexEnabled true
        vectorDrawables.useSupportLibrary = true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        javaCompileOptions {
            annotationProcessorOptions {
                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }
    }


    sourceSets {
        androidTest.assets.srcDirs +=
                files("$projectDir/schemas".toString())
        main {
            res.srcDirs = ['src/main/res', 'src/main/res/images']
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            debuggable false
            multiDexEnabled true
        }
        debug {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            debuggable true
            multiDexEnabled true
        }
    }

    buildFeatures {
        dataBinding = true
        viewBinding = true
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    namespace 'com.sg2022.we_got_the_moves'
    ndkVersion '21.4.7075529'
    buildToolsVersion '33.0.0'
    dependenciesInfo {
        includeInApk true
        includeInBundle true
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])

    implementation 'com.google.flogger:flogger:0.7.4'
    implementation 'com.google.flogger:flogger-system-backend:0.7.4'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation 'com.google.guava:guava:31.1-jre'
    def protobufVersion = '3.11.4'
    //noinspection GradleDependency
    implementation "com.google.protobuf:protobuf-java:$protobufVersion"

    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.8.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
    implementation 'androidx.navigation:navigation-fragment:2.5.3'
    implementation 'androidx.navigation:navigation-ui:2.5.3'
    implementation 'androidx.annotation:annotation:1.5.0'

    //Support
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.javatuples:javatuples:1.2'
    implementation 'commons-io:commons-io:2.11.0'

    //Test
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'

    // CameraX core library
    implementation "androidx.camera:camera-core:1.2.1"
    implementation "androidx.camera:camera-camera2:1.2.1"
    implementation "androidx.camera:camera-lifecycle:1.2.1"
    implementation "androidx.camera:camera-video:1.2.1"
    implementation "androidx.camera:camera-view:1.2.1"
    implementation "androidx.camera:camera-extensions:1.2.1"

    // Android Room + RxJava
    implementation "androidx.room:room-runtime:2.5.0"
    implementation "androidx.room:room-rxjava3:2.5.0"
    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
    implementation 'io.reactivex.rxjava3:rxjava:3.1.6'
    annotationProcessor "androidx.room:room-compiler:2.5.0"
    androidTestImplementation "androidx.room:room-testing:2.5.0"

    //Images
    implementation 'com.github.bumptech.glide:glide:4.14.2'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'

    //Charts
    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'

    //Youtube Player
    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:11.1.0'

    implementation 'com.github.HBiSoft:HBRecorder:3.0.1'

    //Video Playback
    def exoplayerVersion = '2.9.6'
    //noinspection GradleDependency
    implementation "com.google.android.exoplayer:exoplayer-core:$exoplayerVersion"
    //noinspection GradleDependency
    implementation "com.google.android.exoplayer:exoplayer:$exoplayerVersion"
    implementation 'com.github.kishansinghpanwar:AutoPlayer:v1.0.0'
}